--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
-      <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+      <div class="mdl-layout__header-row">
         <h3>Quiz App</h3>
       </div>
     </header>
